# vectorize

./: .editorconfig  .gitignore  .travis.yml  README.md  requirements-dev.txt  setup.cfg  setup.py  tox.ini
tests/: test_model.py  test_utils.py  test_worker.py  utils_tests.py
vectorize/: __init__.py  metadata.py  model.py  utils.py  worker.py
vectorize/shape/: rectangle.py  shape.py
