[metadata]
name = vectorize
summary = vectorize images in Python
description-file = README.md
author = Karl Ding
author-email = karlding@users.noreply.github.com
license = MIT

[files]
packages = vectorize

[nosetests]
verbosity=3
detailed-errors=1
with-coverage=1
nocapture=1
cover-package=vectorize

[pycodestyle]
max-line-length=90
